redactable/tests/ui/sensitive_bare_sensitive_rejected.rs
use redactable::Sensitive;

#[derive(Clone, Sensitive)]
struct Credentials {
    #[sensitive]
    password: String,
}

fn main() {}
